--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Document</title>
+    <title>Doify</title>
 </head>
 <body>
-    <button></button>
+    <header></header>
 </body>
 </html>
