Created dom manipulator to add cards for new proj

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doify</title>
-</head>
-<body>
-    <header></header>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>To do list</h1>
+      <button>Add new project</button>
+    </header>
+    <div class="content"></div>
+    <footer></footer>
+  </body>
 </html>
