Functionality to add and display new cards

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>To do list</h1>
-      <button>Add new project</button>
+      <button>Add item</button>
     </header>
     <div class="content"></div>
     <footer></footer>
