--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,26 @@
       <input id="title" type="text" name="title" required />
 
       <label for="taskDesc">What needs to be done?</label>
-      <input id="taskDesc" type="text" name="taskDesc" required />
+      <textarea id="taskDesc" type="text" name="taskDesc" required></textarea>
 
       <legend for="choiceOne">What is the task priority?</legend>
       <div>
         <label for="choiceOne">Low</label>
-        <input id="choiceOne" type="radio" name="prioStatus" value="0" />
+        <input id="prioLow" type="radio" name="prioStatus" value="0" />
 
         <label for="choiceTwo">Medium</label>
-        <input id="choiceTwo" type="radio" name="prioStatus" value="0" />
+        <input id="prioMed" type="radio" name="prioStatus" value="0" />
 
         <label for="choiceThree">High</label>
-        <input id="choiceThree" type="radio" name="prioStatus" value="0" />
+        <input id="prioHigh" type="radio" name="prioStatus" value="0" />
       </div>
       <label for="taskDate">When is the task due?</label>
       <input id="taskDate" type="date" name="taskDate" required />
-
-      <button type="submit" id="submitForm">Submit now</button>
-      <button type="button" id="resetForm">Clear form</button>
+      <hr>
+      <div class="formButtons">
+          <button type="submit" id="submitForm">Submit now</button>
+          <button type="button" id="resetForm">Clear form</button>
+      </div>
     </form>
 
     <div class="content"></div>
