--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,21 @@
         <label for="choiceThree">High</label>
         <input id="prioHigh" type="radio" name="prioStatus" value="0" />
       </div>
-      <label for="taskDate">When is the task due?</label>
-      <input id="taskDate" type="date" name="taskDate" required />
+      <div class="timeSelect">
+        <label for="dueTime">What day is this task due for?</label>
+        <select id="dueTime">
+          <option value="today">Today</option>
+          <option value="tomorrow">Tomorrow</option>
+          <option value="dayAfterTomorrow">Day after tomorrow</option>
+          <option value="customDay" id="customDay">Another day (select below in calendar!)</option>
+        </select>
+      </div>
+      <div class="dateSelect" style="visibility: hidden; height: 0%;">
+        <label for="taskDate">When is the task due?</label>
+        <input id="taskDate" type="date" min="" max="" name="taskDate" required />
+      </div>
       <hr>
+     
       <div class="formButtons">
           <button type="submit" id="submitForm">Submit now</button>
           <button type="button" id="resetForm">Clear form</button>
