final touches, should work now

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       <div class="formButtons">
           <button type="submit" id="submitForm">Submit now</button>
           <button type="button" id="resetForm">Clear form</button>
+          <button type="button" id="hideForm">Hide Form</button>
+          
       </div>
     </form>
 
